2004-04-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp (NewtonRaphsonRootFind): Ensure that the
	"improved" value is never worse than the previous guess.

	* src/helper/bezier-utils.cpp:
	Greater CodingStyle conformance, mainly whitespace changes.

	* src/helper/bezier-utils.cpp (sp_bezier_fit_cubic_full):
	Always reparameterize between generate_bezier and calc_max_error.
	Switch from discouraged alloca (see man page) to g_new, at cost of
	some extra g_free calls in the code.
	(reparameterize): Do in-place modification.

	* src/helper/bezier-utils-test.cpp:
	Add tests for generate_bezier, sp_bezier_fit_cubic_full.
	Change to a simpler test bezier.

	* src/helper/bezier-utils.cpp (sp_darray_left_tangent,
	sp_darray_right_tangent):
	Switch to using just the two end points for calculating the gradient.
	(The old code could sometimes cause g_warning's.) 
	Correct the documentation of requirements.
	(sp_darray_center_tangent): Similarly remove the #if'ed out code for
	looking at more than two points.

2004-03-31  Ted Gould <ted@gould.cx>

	* src/interface.cpp:  Changing the default size so that it matches
	  the default template size.  This way, for blank documents, the
	  window doesn't open and then resize.

2004-03-31  Ted Gould <ted@gould.cx>
	* src/file.cpp, src/dialogs/filedialog.cpp, src/extension/db.cpp,
	  src/extension/db.h, src/extension/system.cpp:
	  A bunch of changes for Bulia's bug 925875.  Basically now the
	  save dialog remembers which extension you've used.  This also
	  means that save works with non-standard extensions.  Also, it
	  will add extensions for you if you didn't put them on.  Finally,
	  the error dialog doesn't come up if you hit cancel in the
	  'Save As...' dialog.  Whew!

	* src/preferences-skeleton.h:  Added in settings to make the save
	  extension global, along with whether or not the files should have
	  extensions tacked on the end of them.

2004-03-31  Ted Gould <ted@gould.cx>
