@@ -1,3 +1,14 @@
+2004-04-02  Ted Gould <ted@gould.cx>
+    * share/extensions/svgz_output.inkmod, src/main.cpp, src/print.cpp,
+      src/extension/init.cpp, src/extension/implementation/script.cpp,
+      src/extension/implementation/script.h,
+	  src/extension/internal/Makefile.am, src/extension/internal/ps-out.cpp,
+      src/extension/internal/ps-out.h, src/extension/internal/ps.cpp:
+    Fixing the commandline printing.  This required fixing both the
+	print driver to handle the newer extensions stuff.  It seems
+	happy now.  I went ahead and implemented save as postscript
+	while I was at it.
+
 2004-04-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/helper/bezier-utils.cpp (NewtonRaphsonRootFind): Ensure that the
